# metacogitor

./: .bumpversion.cfg  .flake8  .gitignore  .gitleaksignore  .mega-linter.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: README.md  docker-compose.yaml
examples/: agent_creator.py  build_customized_agent.py  debate.py  llm_hello_world.py  research.py  search_google.py  search_kb.py  search_with_specific_engine.py  simple.py  sk_agent.py  startup.py  use_off_the_shelf_agent.py  write_tutorial.py
requirements/: base.txt  dev.txt  extra.txt
scripts/: build_context.py
src/metacogitor/: _compat.py  config.py  const.py  environment.py  errors.py  inspect_module.py  llm.py  logs.py  manager.py  schema.py  software_company.py
src/metacogitor/actions/: __init__.py  action.py  action_output.py  add_requirement.py  analyze_dep_libs.py  azure_tts.py  clone_function.py  create_job_description.py  create_mermaid_diagram.py  create_system_description.py  debug_error.py  design_api.py  design_api_review.py  design_filenames.py  detail_mining.py  estimate_story_effort.py  execute_task.py  extract_audio.py  generate_search_queries.py  get_all_jira_tickets.py  local_transcribe.py  prepare_interview.py  project_management.py  research.py  run_code.py  search_and_summarize.py  write_atomic_notes.py  write_code.py  write_code_review.py  write_docstring.py  write_prd.py  write_prd_review.py  write_test.py  write_tutorial.py  youtube_download.py  youtube_search.py
src/metacogitor/config/: __init__.py  base_config_model.py  browser_config.py  config.py  gpt_config.py  search_config.py
src/metacogitor/document_store/: __init__.py  base_store.py  chromadb_store.py  document.py  faiss_store.py  lancedb_store.py  milvus_store.py  qdrant_store.py
src/metacogitor/exceptions/: __init__.py  base_exception.py  error_details.py  not_configured_exception.py
src/metacogitor/learn/: __init__.py
src/metacogitor/management/: __init__.py  skill_manager.py
src/metacogitor/memory/: __init__.py  longterm_memory.py  memory.py  memory_storage.py
src/metacogitor/prompts/: __init__.py  decompose.py  generate_skill.md  metacogitor_sample.py  sales.py  structure_action.py  structure_goal.py  summarize.py  tutorial_assistant.py  use_lib_sop.py
src/metacogitor/provider/: __init__.py  anthropic_api.py  base_chatbot.py  base_gpt_api.py  jira_provider.py  openai_api.py
src/metacogitor/providers/: __init__.py  base_chatbot.py  base_gpt_api.py
src/metacogitor/roles/: __init__.py  architect.py  customer_service.py  engineer.py  product_manager.py  project_manager.py  prompt.py  qa_engineer.py  researcher.py  role.py  sales.py  seacher.py  sk_agent.py  tutorial_assistant.py  youtube_video_analyst.py
src/metacogitor/tools/: __init__.py  code_interpreter.py  moderation.py  prompt_writer.py  sd_engine.py  search_engine.py  search_engine_ddg.py  search_engine_googleapi.py  search_engine_meilisearch.py  search_engine_serpapi.py  search_engine_serper.py  translator.py  ut_writer.py  web_browser_engine.py  web_browser_engine_playwright.py  web_browser_engine_selenium.py
src/metacogitor/utils/: __init__.py  common.py  cost_manager.py  custom_decoder.py  debounce.py  file.py  get_template.py  highlight.py  json_to_markdown.py  make_sk_kernel.py  mermaid.py  mmdc_ink.py  mmdc_playwright.py  mmdc_pyppeteer.py  parse_html.py  (+8 more)
tests/: test_logs.py
tests/actions/: test_action_output.py  test_base_action.py
tests/config/: test_base_config_model.py
tests/exceptions/: test_base_exception.py  test_error_details.py  test_not_configured_exception.py
tests/providers/: test_base_chatbot.py  test_base_gpt_api.py
tests/tools/: test_moderation.py
tests/utils/: test_cost_manager.py  test_debounce.py  test_rate_limiter.py
(+1 files in other folders)
