# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1-dev"
tag_format = "$version"

[tool.ruff]
# Show code snippets in output.
show-source = true

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["ALL"]#["A", "B", "C", "D", "E", "F", "I"]
ignore = [
    "G004",
    "D203",
    "D213",
    "RUF100"  # Identfies S404 as unknown directive.
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "Q", "R", "S", "T", "W"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.pytest.ini_options]
python_files = ['tests/test_*.py', 'tests/**/test_*.py']
